# java_swift

./: CMakeLists.txt  Package.swift
Sources/: JNICore.swift  JNIObject.swift  Runnable.swift
